Make the corrections form more readable
The color box now has a black background?  Force it to its old color.  Our form styles are much larger now, so also increase the size of the colorbox.

--- a/www/css/peoplefinder_default.css
+++ b/www/css/peoplefinder_default.css
@@ -313,3 +313,8 @@ padding:10px;
 #maincontent .contact_list h3 {
     
 }
+
+#colorbox #cboxLoadedContent {
+    background: rgb(242, 242, 242);
+    padding: 1em;
+}
